--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <!-- Preload critical resources -->
     <link rel="preload" href="assets/css/steller.css" as="style">
-    <link rel="preload" href="assets/css/professional.css" as="style">
+    <link rel="preload" href="assets/css/professional-clean.css" as="style">
     <link rel="preload" href="assets/imgs/Imagem_-img-removebg-preview.png" as="image">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     
@@ -30,7 +30,7 @@
     <!-- Bootstrap + Steller main styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
     <link rel="stylesheet" href="assets/css/steller.css">
-    <link rel="stylesheet" href="assets/css/professional.css">
+    <link rel="stylesheet" href="assets/css/professional-clean.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" crossorigin="anonymous">
 </head>
 
@@ -360,7 +360,7 @@
 
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="scroll-effect">
+                    <div class="professional-scroll-effect">
                         <div class="img-wrapper">
                             <img src="assets/imgs/cart-img.png" alt="Shopping Cart - E-commerce Solution">
                             <div class="overlay">
@@ -384,7 +384,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="scroll-effect">
+                    <div class="professional-scroll-effect">
                         <div class="img-wrapper">
                             <img src="assets/imgs/cardapio.png" alt="Menu Digital - Restaurant Solution">
                             <div class="overlay">
@@ -408,7 +408,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="scroll-effect">
+                    <div class="professional-scroll-effect">
                         <div class="img-wrapper">
                             <img src="assets/imgs/rayal-park-img.png" alt="Landing Page - Modern Design">
                             <div class="overlay">
@@ -432,7 +432,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="scroll-effect">
+                    <div class="professional-scroll-effect">
                         <div class="img-wrapper">
                             <img src="assets/imgs/teste-2.png" alt="Anime Manager - React Application">
                             <div class="overlay">
@@ -456,7 +456,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="scroll-effect">
+                    <div class="professional-scroll-effect">
                         <div class="img-wrapper">
                             <img src="assets/imgs/landing.png" alt="Corporate Landing Page">
                             <div class="overlay">
@@ -480,7 +480,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="scroll-effect">
+                    <div class="professional-scroll-effect">
                         <div class="professional-card card border text-center p-4" style="height: 250px; display: flex; align-items: center; justify-content: center;">
                             <div>
                                 <i class="fas fa-plus-circle professional-text-accent" style="font-size: 3rem; margin-bottom: 1rem;"></i>
@@ -701,9 +701,9 @@
             // Navbar background on scroll
             $(window).scroll(function() {
                 if ($(window).scrollTop() > 50) {
-                    $('.navbar').addClass('scrolled');
+                    $('.professional-nav').addClass('scrolled');
                 } else {
-                    $('.navbar').removeClass('scrolled');
+                    $('.professional-nav').removeClass('scrolled');
                 }
             });
 
