--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                            style="color: #007bff; text-decoration: none; font-weight: 600;">
                             Brenno Alencar
                         </a>
-                        <br><small>Desenvolvido com 💜 e muito ☕</small>
+                        <br><small>Desenvolvido com muito ☕</small>
                     </p>
                 </div>
                 <div class="col-md-6 text-md-right">
