--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
                                         <input type="hidden" name="_subject" value="Contato via Portfólio - Oportunidade">
                                         <input type="hidden" name="_next" value="https://brennoalencar.dev/obrigado.html">
                                         <input type="hidden" name="_captcha" value="false">
+                                        <input type="hidden" name="_template" value="table">
                                         <div class="form-group mb-3">
                                             <label class="contact-label" for="name">Nome Completo</label>
                                             <input type="text" class="form-control" id="name" name="name" placeholder="Seu nome completo" required>
