--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-6">
                     <div class="infos">
                         <h6 class="subtitle">Olá! Eu sou</h6>
-                        <h1 class="title">Brenno Alencar</h1>
+                        <h1 class="title" style="white-space: nowrap;">Brenno Alencar</h1>
                         <div class="marquee-container">
                             <p id="marquee-text" class="header-title-dois">Full Stack Developer</p>
                         </div>
