--- a/index.html
+++ b/index.html
@@ -642,11 +642,9 @@
             // Typing effect for marquee
             const texts = [
                 "Full Stack Developer",
-                "JavaScript Specialist", 
-                "React.js Developer",
-                "Node.js Developer", 
-                "PHP Developer",
-                "Problem Solver"
+                "JavaScript Expert", 
+                "React Developer",
+                "PHP Developer"
             ];
             
             let currentIndex = 0;
@@ -660,7 +658,7 @@
             }
             
             typeWriter();
-            setInterval(typeWriter, 3000);
+            setInterval(typeWriter, 4000); // Aumentado de 3000 para 4000ms
         });
     </script>
 
