--- a/index.html
+++ b/index.html
@@ -206,115 +206,143 @@
 
     <!-- Skills section -->
     <section id="service" class="section">
-        <div class="container text-center">
-            <h2 class="subtitle sub-secundario">Certificados</h2>
-            <p class="mb-5 pb-4 lead">
-                Certificados que obtive refletem meu compromisso com a excelência profissional. 
-                Estou sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível.
-            </p>
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="title">Habilidades <span class="about-me">Técnicas</span></h2>
+                <p class="lead">
+                    Tecnologias e ferramentas que domino para criar soluções robustas e escaláveis
+                </p>
+            </div>
 
             <div class="row scroll-effect">
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link" href="certificado/Javascript-40-Horas.pdf" target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-js" style="font-size: 3rem; color: #F7DF1E;"></i>
-                                <h5 class="card-title-icon mt-3">JavaScript</h5>
-                                <p class="card-text">ES6+, Async/Await, Promises</p>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fab fa-js" style="font-size: 3rem; color: #F7DF1E;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">JavaScript</h5>
+                            <p class="card-text">ES6+, Async/Await, Promises</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 90%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/6b4a6782-6a66-4ea4-80b1-eeb7fdb02f96?lang=pt_BR"
-                        target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-react" style="font-size: 3rem; color: #61DAFB;"></i>
-                                <h5 class="card-title-icon mt-3">React.js</h5>
-                                <p class="card-text">Hooks, Context API, Redux</p>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fab fa-react" style="font-size: 3rem; color: #61DAFB;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">React.js</h5>
+                            <p class="card-text">Hooks, Context API, Redux</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 85%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/b95e2437-a098-4255-a443-be1351e730ee?lang=pt_BR"
-                        target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-node" style="font-size: 3rem; color: #339933;"></i>
-                                <h5 class="card-title-icon mt-3">Node.js</h5>
-                                <p class="card-text">Express, APIs RESTful</p>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fab fa-node" style="font-size: 3rem; color: #339933;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">Node.js</h5>
+                            <p class="card-text">Express, APIs RESTful</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 80%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/51344ec4-1bb0-4973-ab2d-431820808a0e?lang=pt_BR"
-                        target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-html5" style="font-size: 3rem; color: #E34F26;"></i>
-                                <h5 class="card-title-icon mt-3">HTML5</h5>
-                                <p class="card-text">Semântica, Acessibilidade</p>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fab fa-php" style="font-size: 3rem; color: #777BB4;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">PHP</h5>
+                            <p class="card-text">POO, MVC, Laravel</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 85%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/e07572b4-3579-4a72-8ed0-82dd7e983c08?lang=pt_BR"
-                        target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-css3-alt" style="font-size: 3rem; color: #1572B6;"></i>
-                                <h5 class="card-title-icon mt-3">CSS3</h5>
-                                <p class="card-text">Flexbox, Grid, Animations</p>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fas fa-database" style="font-size: 3rem; color: #336791;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">MySQL</h5>
+                            <p class="card-text">Queries complexas, Otimização</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 80%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/21c40a84-d030-482a-b903-0318f9a60fce?lang=pt_BR"
-                        target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-square-js" style="font-size: 3rem; color: #F7DF1E;"></i>
-                                <h5 class="card-title-icon mt-3">Lógica de Programação</h5>
-                                <p class="card-text">Algoritmos, Estruturas de Dados</p>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fab fa-git-alt" style="font-size: 3rem; color: #F05032;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">Git</h5>
+                            <p class="card-text">Versionamento, Git Flow</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 90%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/9abec107-6763-41a7-8c57-15b732bbc82a?lang=pt_BR"
-                        target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-git-alt" style="font-size: 3rem; color: #F05032;"></i>
-                                <h5 class="card-title-icon mt-3">Git</h5>
-                                <p class="card-text">Versionamento, Git Flow</p>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fab fa-html5" style="font-size: 3rem; color: #E34F26;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">HTML5</h5>
+                            <p class="card-text">Semântica, Acessibilidade</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 95%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/57d6f065-9976-448d-b86f-aa7a12bdb096?lang=pt_BR"
-                        target="_blank">
-                        <div class="custom-card card border">
-                            <div class="card-body">
-                                <i class="fab fa-bootstrap" style="font-size: 3rem; color: #7952B3;"></i>
-                                <h5 class="card-title-icon mt-3">Bootstrap</h5>
-                                <p class="card-text">Framework CSS, Responsivo</p>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="custom-card card border text-center p-4">
+                        <div class="card-body">
+                            <i class="fab fa-css3-alt" style="font-size: 3rem; color: #1572B6;"></i>
+                            <h5 class="card-title-icon mt-3 mb-2">CSS3</h5>
+                            <p class="card-text">Flexbox, Grid, Animations</p>
+                            <div class="progress mt-3" style="height: 4px;">
+                                <div class="progress-bar" style="width: 90%; background: var(--gradient-primary);"></div>
                             </div>
                         </div>
-                    </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-5">
+                <h4 style="margin-bottom: 30px;">Certificações</h4>
+                <div class="row justify-content-center">
+                    <div class="col-md-2 col-sm-4 mb-3">
+                        <a href="certificado/Javascript-40-Horas.pdf" target="_blank" class="btn btn-outline-secondary btn-sm">
+                            <i class="fab fa-js mr-1"></i>JavaScript
+                        </a>
+                    </div>
+                    <div class="col-md-2 col-sm-4 mb-3">
+                        <a href="https://cursos.alura.com.br/certificate/6b4a6782-6a66-4ea4-80b1-eeb7fdb02f96?lang=pt_BR" target="_blank" class="btn btn-outline-secondary btn-sm">
+                            <i class="fab fa-react mr-1"></i>React.js
+                        </a>
+                    </div>
+                    <div class="col-md-2 col-sm-4 mb-3">
+                        <a href="https://cursos.alura.com.br/certificate/b95e2437-a098-4255-a443-be1351e730ee?lang=pt_BR" target="_blank" class="btn btn-outline-secondary btn-sm">
+                            <i class="fab fa-node mr-1"></i>Node.js
+                        </a>
+                    </div>
+                    <div class="col-md-2 col-sm-4 mb-3">
+                        <a href="https://cursos.alura.com.br/certificate/9abec107-6763-41a7-8c57-15b732bbc82a?lang=pt_BR" target="_blank" class="btn btn-outline-secondary btn-sm">
+                            <i class="fab fa-git-alt mr-1"></i>Git
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -622,6 +650,12 @@
                     
                     if (elementBottom > viewportTop && elementTop < viewportBottom) {
                         $(this).addClass('show');
+                        
+                        // Animar barras de progresso
+                        $(this).find('.progress-bar').each(function() {
+                            var width = $(this).css('width');
+                            $(this).css('width', '0').animate({width: width}, 2000);
+                        });
                     }
                 });
             }
