--- a/index.html
+++ b/index.html
@@ -206,15 +206,110 @@
 
     <!-- Skills section -->
     <section id="service" class="section">
-        <div class="container">
-            <div class="text-center mb-5">
-                <h2 class="title">Habilidades <span class="about-me">Técnicas</span></h2>
-                <p class="lead">
-                    Tecnologias e ferramentas que domino para criar soluções robustas e escaláveis
-                </p>
-            </div>
+        <div class="container text-center">
+            <h2 class="subtitle sub-secundario">Certificados</h2>
+            <p class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência
+                profissional. Estou
+                sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível.</p>
 
             <div class="row scroll-effect">
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link" href="certificado/Javascript-40-Horas.pdf" target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-js"></i>
+                                <h5 class="card-title-icon">JavaScript</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/6b4a6782-6a66-4ea4-80b1-eeb7fdb02f96?lang=pt_BR"
+                        target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-react"></i>
+                                <h5 class="card-title-icon">React.js</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/b95e2437-a098-4255-a443-be1351e730ee?lang=pt_BR"
+                        target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-node"></i>
+                                <h5 class="card-title-icon">Node.js</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/51344ec4-1bb0-4973-ab2d-431820808a0e?lang=pt_BR"
+                        target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-html5"></i>
+                                <h5 class="card-title-icon">HTML</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/e07572b4-3579-4a72-8ed0-82dd7e983c08?lang=pt_BR"
+                        target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-css3"></i>
+                                <h5 class="card-title-icon">CSS</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/21c40a84-d030-482a-b903-0318f9a60fce?lang=pt_BR"
+                        target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-square-js"></i>
+                                <h5 class="card-title-icon">Lógica de programação</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/9abec107-6763-41a7-8c57-15b732bbc82a?lang=pt_BR"
+                        target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-git-alt"></i>
+                                <h5 class="card-title-icon">Git</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <a class="card-link"
+                        href="https://cursos.alura.com.br/certificate/57d6f065-9976-448d-b86f-aa7a12bdb096?lang=pt_BR"
+                        target="_blank">
+                        <div class="custom-card card border">
+                            <div class="card-body">
+                                <i class="fab fa-bootstrap"></i>
+                                <h5 class="card-title-icon">Bootstrap</h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="custom-card card border text-center p-4">
                         <div class="card-body">
