--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
     <link rel="stylesheet" href="assets/css/steller.css">
     <link rel="stylesheet" href="assets/css/modern-theme.css">
+    <link rel="stylesheet" href="assets/css/custom-fixes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
@@ -435,6 +436,7 @@
     <script src="assets/js/scroll-direita.js"></script>
     <script src="assets/js/scroll.js"></script>
     <script src="assets/js/effect.js"></script>
+    <script src="assets/js/custom-animations.js"></script>
     <!-- steller js -->
     <script src="assets/js/steller.js"></script>
 
