--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
                         </div>
 
                         <div class="buttons pt-3">
-                            <a href="mailto:brennoalencar79@gmail.com" target="_blank" class="btn btn-primary rounded">Me Contrate!</a>
-                            <a href="curriculo/Curriculo.pdf" download class="btn btn-dark rounded">Download CV</a>
+                            <a href="mailto:brennoalencar79@gmail.com" target="_blank" class="btn btn-primary rounded">
+                                <i class="fas fa-envelope me-2"></i>Me Contrate!
+                            </a>
+                            <a href="curriculo/Curriculo.pdf" download class="btn btn-dark rounded">
+                                <i class="fas fa-download me-2"></i>Download CV
+                            </a>
                         </div>
 
                         <div class="socials mt-4">
@@ -145,7 +149,9 @@
                                 resultados sólidos e inovadores.
                             </p>
                             
-                            <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">Download CV</a>
+                            <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">
+                                <i class="fas fa-download me-2"></i>Download CV
+                            </a>
                         </div>
                     </div>
                 </div>
