--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <section id="skills" class="section">
             <div class="container text-center">
                 <h2 class="subtitle sub-secundario">Certificados</h2>
-                <p class="mb-5 pb-4">
+                <p class="mb-5 pb-4 certificates-description">
                     Certificados que obtive refletem meu compromisso com a excelência profissional. 
                     Estou sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível.
                 </p>
@@ -171,8 +171,11 @@
                         <a class="card-link" href="certificado/Javascript-40-Horas.pdf" target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-js" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-js" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">JavaScript</h5>
+                                    <p class="card-course-name">Curso de JavaScript - 40 Horas</p>
                                 </div>
                             </div>
                         </a>
@@ -183,8 +186,11 @@
                             target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-react" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-react" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">React.js</h5>
+                                    <p class="card-course-name">React: Desenvolvendo com JavaScript</p>
                                 </div>
                             </div>
                         </a>
@@ -195,8 +201,11 @@
                             target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-node" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-node" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">Node.js</h5>
+                                    <p class="card-course-name">Node.js: Criando APIs REST</p>
                                 </div>
                             </div>
                         </a>
@@ -207,8 +216,11 @@
                             target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-html5" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-html5" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">HTML5</h5>
+                                    <p class="card-course-name">HTML5 e CSS3: Criando páginas web</p>
                                 </div>
                             </div>
                         </a>
@@ -219,8 +231,11 @@
                             target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">CSS3</h5>
+                                    <p class="card-course-name">CSS3: Estilizando páginas web</p>
                                 </div>
                             </div>
                         </a>
@@ -231,8 +246,11 @@
                             target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-square-js" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-square-js" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">Lógica de Programação</h5>
+                                    <p class="card-course-name">Lógica de Programação: Primeiros passos</p>
                                 </div>
                             </div>
                         </a>
@@ -243,8 +261,11 @@
                             target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-git-alt" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-git-alt" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">Git</h5>
+                                    <p class="card-course-name">Git e GitHub: Controle e compartilhe seu código</p>
                                 </div>
                             </div>
                         </a>
@@ -255,8 +276,11 @@
                             target="_blank">
                             <div class="custom-card card border">
                                 <div class="card-body">
-                                    <i class="fab fa-bootstrap" aria-hidden="true"></i>
+                                    <div class="card-icon">
+                                        <i class="fab fa-bootstrap" aria-hidden="true"></i>
+                                    </div>
                                     <h5 class="card-title-icon">Bootstrap</h5>
+                                    <p class="card-course-name">Bootstrap: Criando páginas responsivas</p>
                                 </div>
                             </div>
                         </a>
