--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <section id="portfolio" class="section">
             <div class="container text-center">
                 <h2 class="subtitle sub-title-one sub-title-m6">
-                    <i class="fas fa-briefcase text-primary me-2"></i>Portfólio
+                    Portfólio
                 </h2>
                 <p class="mb-5 pb-4">
                     Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
@@ -430,10 +430,10 @@
         <section id="contact" class="section">
             <div class="container text-center">
                 <h2 class="subtitle sub-title">
-                    <i class="fas fa-envelope text-primary me-2"></i>Contato
+                    Contato
                 </h2>
                 <p class="mb-5 pb-4">
-                    <i class="fas fa-comments text-info me-2"></i>Vamos conversar! Tem alguma ideia ou pergunta?
+                    Vamos conversar! Tem alguma ideia ou pergunta?
                     Preencha o formulário ou
                     envie um e-mail, estou à disposição!
                 </p>
