Ajuste colors text

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <h2 class="subtitle sub-title">
                     Contato
                 </h2>
-                <p class="mb-5 pb-4">
+                <p class="mb-5 pb-4 contact-description">
                     Vamos conversar! Tem alguma ideia ou pergunta?
                     Preencha o formulário ou
                     envie um e-mail, estou à disposição!
