--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-js" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">JavaScript</h5>
                                     <p class="card-course-name">Curso de JavaScript - 40 Horas</p>
                                 </div>
                             </div>
@@ -201,6 +202,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-react" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">React.js</h5>
                                     <p class="card-course-name">React: Desenvolvendo com JavaScript</p>
                                 </div>
                             </div>
@@ -215,6 +217,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-node" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">Node.js</h5>
                                     <p class="card-course-name">Node.js: Criando APIs REST</p>
                                 </div>
                             </div>
@@ -229,6 +232,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-html5" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">HTML5</h5>
                                     <p class="card-course-name">HTML5 e CSS3: Criando páginas web</p>
                                 </div>
                             </div>
@@ -243,6 +247,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-css3-alt" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">CSS3</h5>
                                     <p class="card-course-name">CSS3: Estilizando páginas web</p>
                                 </div>
                             </div>
@@ -257,6 +262,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-square-js" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">Lógica de Programação</h5>
                                     <p class="card-course-name">Lógica de Programação: Primeiros passos</p>
                                 </div>
                             </div>
@@ -271,6 +277,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-git-alt" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">Git</h5>
                                     <p class="card-course-name">Git e GitHub: Controle e compartilhe seu código</p>
                                 </div>
                             </div>
@@ -285,6 +292,7 @@
                                     <div class="card-icon">
                                         <i class="fab fa-bootstrap" aria-hidden="true"></i>
                                     </div>
+                                    <h5 class="card-title-icon">Bootstrap</h5>
                                     <p class="card-course-name">Bootstrap: Criando páginas responsivas</p>
                                 </div>
                             </div>
