--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                         <div class="marquee-container">
                             <p id="marquee-text" class="header-title-dois">Full Stack Developer</p>
                         </div>
+                        
+                        <p class="header-description mt-3">
+                            Apaixonado por tecnologia e programação, sempre em busca de novos desafios e soluções inovadoras para transformar ideias em realidade digital.
+                        </p>
 
                         <div class="buttons pt-3">
                             <a href="mailto:brennoalencar79@gmail.com" target="_blank" class="btn btn-primary rounded">
