--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                         
                         <p class="header-description mt-3">
-                            Apaixonado por tecnologia e programação, sempre em busca de novos desafios e soluções inovadoras para transformar ideias em realidade digital.
+                            Apaixonado por tecnologia e programação, sempre em busca de novos desafios e soluções inovadoras.
                         </p>
 
                         <div class="buttons pt-3">
