--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                                 <div class="d-flex flex-wrap gap-2">
                                     <span class="skill-badge"><i class="fab fa-js-square text-warning"></i>
                                         JavaScript</span>
+                                    <span class="skill-badge"><i class="fab fa-js-square text-info"></i> TypeScript</span>
                                     <span class="skill-badge"><i class="fab fa-react text-info"></i> React.js</span>
                                     <span class="skill-badge"><i class="fab fa-php text-primary"></i> PHP</span>
                                     <span class="skill-badge"><i class="fab fa-node text-success"></i> Node.js</span>
